--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.2",
+    "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
