--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-imask": "^7.1.3",
+    "react-spring": "^9.7.2",
     "react-text-mask": "^5.5.0",
     "styled-components": "^6.0.5",
     "text-mask-addons": "^3.8.0"
