--- a/package.json
+++ b/package.json
@@ -15,17 +15,19 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.1",
-    "@mui/material": "^5.14.2",
+    "@mui/material": "^5.14.11",
+    "@mui/styled-engine-sc": "^5.14.11",
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
     "gh-pages": "^6.0.0",
+    "material-ui-phone-number-2": "^1.3.0",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-imask": "^7.1.3",
     "react-spring": "^9.7.2",
     "react-text-mask": "^5.5.0",
-    "styled-components": "^6.0.5",
+    "styled-components": "^6.0.8",
     "text-mask-addons": "^3.8.0"
   },
   "devDependencies": {
