--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-imask": "^7.1.3",
     "react-spring": "^9.7.2",
     "react-text-mask": "^5.5.0",
+    "sass": "^1.68.0",
     "styled-components": "^6.0.8",
     "text-mask-addons": "^3.8.0"
   },
