--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "react-imask": "^7.1.3",
     "react-spring": "^9.7.2",
     "react-text-mask": "^5.5.0",
-    "sass": "^1.68.0",
+    "sass": "^1.69.2",
     "styled-components": "^6.0.8",
     "text-mask-addons": "^3.8.0"
   },
