--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "react-imask": "^7.1.3",
+    "react-phone-input-2": "^2.15.1",
     "react-spring": "^9.7.2",
     "react-text-mask": "^5.5.0",
     "sass": "^1.69.2",
