--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "predeploy": "yarn build"
   },
   "dependencies": {
+    "3d-react-carousal": "^5.0.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.1",
@@ -28,7 +29,9 @@
     "react-imask": "^7.1.3",
     "react-phone-input-2": "^2.15.1",
     "react-spring": "^9.7.2",
+    "react-spring-3d-carousel": "^1.3.4",
     "react-text-mask": "^5.5.0",
+    "react-uuid": "^2.0.0",
     "sass": "^1.69.2",
     "styled-components": "^6.0.8",
     "text-mask-addons": "^3.8.0"
